--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 /* General Styling */
 body {
-  font-family: Arial, sans-serif;
+  font-family: Playfair Display, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
