--- a/style.css
+++ b/style.css
@@ -58,7 +58,18 @@ ul {
   list-style-type: none;
   padding: 0;
 }
+nav a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  padding: 8px;
+  transition: 0.3s;
+}
 
+nav a:hover {
+  color: #0077ff;
+  text-decoration: underline;
+}
 p {
   font-size: 18px;
   font-weight: bold;
